[metadata]
name = DataLoader
# Version needs regex in setup.py.
url = https://github.com/artsalliancemedia/producer2-stress-testing/tree/dataloader
project_urls =
    Documentation = https://github.com/artsalliancemedia/producer2-stress-testing/wiki
    Code = https://github.com/artsalliancemedia/producer2-stress-testing/tree/dataloader
    Issue tracker = https://github.com/artsalliancemedia/producer2-stress-testing/issues
maintainer = jack.wu
maintainer_email = jack.wu@artsalliancemedia.com
description = A simple framework for create data and load into db
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Test Environment
    Framework :: DataLoader
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    dataloader
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
